# online_shop

./: category.json  groups.json  main.py  online_shop_app.json  product.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogarticle_confirm_delete.html  blogarticle_detail.html  blogarticle_form.html  blogarticle_list.html
config/: settings.py  urls.py
online_shop_app/: admin.py  froms.py  models.py  services.py  urls.py  views.py
online_shop_app/management/commands/: custom_commands.py
online_shop_app/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_contact.py  0004_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
online_shop_app/templates/: contacts.html  home.html  home1.html  products_detail.html  products_list.html
online_shop_app/templates/includes/: inc_menu.html
online_shop_app/templates/online_shop_app/: category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_form.html
online_shop_app/templates/online_shop_app/includes/: inc_menu.html
online_shop_app/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html
