[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Eugene Geym <geymzheka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
django = "^5.0.6"
pillow = "^10.3.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
