[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Eugene Geym <geymzheka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
django = "4.2.2"
pillow = "^10.3.0"
black = "^24.4.2"
ipython = "^8.24.0"
pytils = "^0.4.1"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
certifi = "^2024.6.2"
python-dotenv = "^1.0.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
